--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -2,7 +2,7 @@ name: Deploy user-service
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'backend/**'
       - 'cloud/gcp/backend/**'
