--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -2,7 +2,7 @@ name: e2e tests
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'backend/**'
       - '.github/workflows/test-data-integration.yml'
