--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/user-service/main"]
     ports:
       - 38080:8080
 
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-queue-manager/main"]
     ports:
       - 38081:8080
 
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/data-collector/main"]
 
   search-result-calculator:
     env_file:
@@ -36,7 +36,7 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-result-calculator/main"]
 
   top-hotels-aggregator:
     env_file:
@@ -44,7 +44,7 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/top-hotels-aggregator/main"]
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
