initialize the cassandra client with the keyspace - it allows to write a query without the keyspace

--- a/cloud/opc/westus01/westus01.env
+++ b/cloud/opc/westus01/westus01.env
@@ -1,6 +1,7 @@
 # all following variables will appear
 # CORS_ORIGINS
 # LOG_COLLECTOR_TOKEN
+# ASTRA_DB_KEYSPACE
 # ASTRA_DB_USERNAME
 # ASTRA_DB_PASSWORD
 # MQ_ADDRESS
