--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -56,6 +56,7 @@ jobs:
         env:
           CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
           LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
+          ASTRA_DB_KEYSPACE: ${{ secrets.ASTRA_DB_KEYSPACE }}
           ASTRA_DB_USERNAME: ${{ secrets.ASTRA_DB_USERNAME }}
           ASTRA_DB_PASSWORD: ${{ secrets.ASTRA_DB_PASSWORD }}
           MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
@@ -68,6 +69,7 @@ jobs:
             cd cloud/opc/westus01
             echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus01.env
             echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus01.env
+            echo "ASTRA_DB_KEYSPACE=$ASTRA_DB_KEYSPACE" >> westus01.env
             echo "ASTRA_DB_USERNAME=$ASTRA_DB_USERNAME" >> westus01.env
             echo "ASTRA_DB_PASSWORD=$ASTRA_DB_PASSWORD" >> westus01.env
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus01.env
