try to install cqlsh part 1

--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - cassandra-poc
     paths:
       - 'backend/**'
       - '.github/workflows/test-data-integration.yml'
@@ -42,6 +43,16 @@ jobs:
         working-directory: ./backend
         run: |
           npm run build:dc
+
+      - name: Create cassandra tables
+        working-directory: ./db/cassandra
+        run: |
+          pip --version
+          sudo apt update
+          sudo apt install python-pip
+          pip --version
+          pip install -U cqlsh
+          cqlsh --help
 
       - name: Run data integration tests
         working-directory: ./backend
