--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -48,7 +48,7 @@ jobs:
         working-directory: ./db/cassandra
         run: |
           pip install -U cqlsh
-          cqlsh --help
+          cqlsh --version
 
       - name: Run data integration tests
         working-directory: ./backend
