try to install cqlsh part 16

--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -34,14 +34,13 @@ jobs:
         working-directory: ./db/cassandra
         run: |
           curl https://downloads.datastax.com/enterprise/cqlsh-6.8.5-bin.tar.gz --output cqlsh-bin.tar.gz
-          mkdir /home/cqlsh
-          tar -xzvf cqlsh-bin.tar.gz -C /home/cqlsh
+          tar -xzvf cqlsh-bin.tar.gz
 
       - name: Create cassandra tables
         working-directory: ./db/cassandra
         run: |
-          /cqlsh/bin/cqlsh --version
-          /cqlsh/bin/cqlsh -f ./01_init.cql
+          /cqlsh-6.8.5/bin/cqlsh --version
+          /cqlsh-6.8.5/bin/cqlsh -f ./01_init.cql
 
       - name: Use cache
         uses: actions/cache@v2
