try to install cqlsh part 19

--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -34,7 +34,10 @@ jobs:
         working-directory: ./db/cassandra
         run: |
           curl https://downloads.datastax.com/enterprise/cqlsh-6.8.5-bin.tar.gz --output cqlsh-bin.tar.gz
-          tar -xzvf cqlsh-bin.tar.gz
+          tar -xzvf cqlsh-bin.tar.gz -C cqlsh
+          ls -a
+          cd cqlsh
+          ls -a
 
       - name: Use cache
         uses: actions/cache@v2
@@ -57,14 +60,15 @@ jobs:
       - name: Create cassandra tables
         working-directory: ./db/cassandra
         run: |
-          cqlsh-6.8.5/bin/cqlsh --version
-          cqlsh-6.8.5/bin/cqlsh -f ./01_init.cql
+          cqlsh/bin/cqlsh --version
+          cqlsh/bin/cqlsh -f ./01_init.cql
 
       - name: Run data integration tests
         working-directory: ./backend
         env:
           NODE_ENV: dev
           CORS_ORIGINS: ''
+          ASTRA_DB_KEYSPACE: kingboo
           ASTRA_CONTACT_POINT: localhost
           MQ_ADDRESS: mock
           MQ_COLLECTING_SCENARIO_QUEUE_NAME: mock
