--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -30,11 +30,14 @@ jobs:
         with:
           python-version: '2.7'
 
-      - name: Install cqlsh
+      - name: Download and extract "cqlsh"
         working-directory: ./db/cassandra
         run: |
           curl https://downloads.datastax.com/enterprise/cqlsh-6.8.5-bin.tar.gz --output cqlsh-bin.tar.gz
           tar --extract --file=cqlsh-bin.tar.gz cqlsh-6.8.5 -C cqlsh
+          ls -a
+          cd cqlsh
+          ls -a
 
       - name: Use cache
         uses: actions/cache@v2
