--- a/cloud/opc/westus01/westus01.env
+++ b/cloud/opc/westus01/westus01.env
@@ -1,6 +1,10 @@
 # all following variables will appear
 # CORS_ORIGINS
 # LOG_COLLECTOR_TOKEN
+# GCP_STORAGE_PROJECT_ID
+# GCP_STORAGE_BUCKET_NAME
+# GCP_STORAGE_CLIENT_EMAIL
+# GCP_STORAGE_CLIENT_KEY
 # ASTRA_DB_KEYSPACE
 # ASTRA_DB_USERNAME
 # ASTRA_DB_PASSWORD
