--- a/prod.env.example
+++ b/prod.env.example
@@ -5,10 +5,11 @@ LOG_COLLECTOR_TOKEN=
 CORS_ORIGINS=localhost
 HOTELS_WITHOUT_UPDATE_RETENTION_HOURS=168
 SCRAP_ACTIVITY_WITHOUT_UPDATE_RETENTION_HOURS=72
-RAW_SEARCH_RESULT_RETENTION_HOURS=24
-SAVE_SEARCH_RESULT_AS_JSON=true
-SAVE_RAW_SEARCH_RESULT_AS_JSON=true
 TOP_HOTELS_SELECT_LIMIT=10
+GCP_STORAGE_PROJECT_ID=
+GCP_STORAGE_BUCKET_NAME=
+GCP_STORAGE_CLIENT_EMAIL=
+GCP_STORAGE_CLIENT_KEY=
 MONGO_ADDRESS=
 SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
 FIRESTORE_PROJECT_ID=kingboo
