--- a/.github/workflows/deploy-to-westus00.yml
+++ b/.github/workflows/deploy-to-westus00.yml
@@ -74,6 +74,10 @@ jobs:
         env:
           CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
           LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
+          GCP_STORAGE_PROJECT_ID: ${{ secrets.ASTRA_DB_PASSWORD }}
+          GCP_STORAGE_BUCKET_NAME: ${{ secrets.GCP_STORAGE_BUCKET_NAME }}
+          GCP_STORAGE_CLIENT_EMAIL: ${{ secrets.ASTRA_DB_PASSWORD }}
+          GCP_STORAGE_CLIENT_KEY: ${{ secrets.ASTRA_DB_PASSWORD }}
           FIRESTORE_PROJECT_ID: ${{ secrets.FIRESTORE_PROJECT_ID }}
           FIRESTORE_CLIENT_EMAIL: ${{ secrets.FIRESTORE_CLIENT_EMAIL }}
           FIRESTORE_CLIENT_KEY: ${{ secrets.FIRESTORE_CLIENT_KEY }}
@@ -88,6 +92,10 @@ jobs:
             cd cloud/opc/westus00
             echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus00.env
             echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus00.env
+            echo "GCP_STORAGE_PROJECT_ID=$GCP_STORAGE_PROJECT_ID" >> westus00.env
+            echo "GCP_STORAGE_BUCKET_NAME=$GCP_STORAGE_BUCKET_NAME" >> westus00.env
+            echo "GCP_STORAGE_CLIENT_EMAIL=$GCP_STORAGE_CLIENT_EMAIL" >> westus00.env
+            echo "GCP_STORAGE_CLIENT_KEY=$GCP_STORAGE_CLIENT_KEY" >> westus00.env
             echo "FIRESTORE_PROJECT_ID=$FIRESTORE_PROJECT_ID" >> westus00.env
             echo "FIRESTORE_CLIENT_EMAIL=$FIRESTORE_CLIENT_EMAIL" >> westus00.env
             echo "FIRESTORE_CLIENT_KEY=$FIRESTORE_CLIENT_KEY" >> westus00.env
