--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -56,6 +56,10 @@ jobs:
         env:
           CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
           LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
+          GCP_STORAGE_PROJECT_ID: ${{ secrets.ASTRA_DB_PASSWORD }}
+          GCP_STORAGE_BUCKET_NAME: ${{ secrets.GCP_STORAGE_BUCKET_NAME }}
+          GCP_STORAGE_CLIENT_EMAIL: ${{ secrets.ASTRA_DB_PASSWORD }}
+          GCP_STORAGE_CLIENT_KEY: ${{ secrets.ASTRA_DB_PASSWORD }}
           ASTRA_DB_KEYSPACE: ${{ secrets.ASTRA_DB_KEYSPACE }}
           ASTRA_DB_USERNAME: ${{ secrets.ASTRA_DB_USERNAME }}
           ASTRA_DB_PASSWORD: ${{ secrets.ASTRA_DB_PASSWORD }}
@@ -69,6 +73,10 @@ jobs:
             cd cloud/opc/westus01
             echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus01.env
             echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus01.env
+            echo "GCP_STORAGE_PROJECT_ID=$GCP_STORAGE_PROJECT_ID" >> westus01.env
+            echo "GCP_STORAGE_BUCKET_NAME=$GCP_STORAGE_BUCKET_NAME" >> westus01.env
+            echo "GCP_STORAGE_CLIENT_EMAIL=$GCP_STORAGE_CLIENT_EMAIL" >> westus01.env
+            echo "GCP_STORAGE_CLIENT_KEY=$GCP_STORAGE_CLIENT_KEY" >> westus01.env
             echo "ASTRA_DB_KEYSPACE=$ASTRA_DB_KEYSPACE" >> westus01.env
             echo "ASTRA_DB_USERNAME=$ASTRA_DB_USERNAME" >> westus01.env
             echo "ASTRA_DB_PASSWORD=$ASTRA_DB_PASSWORD" >> westus01.env
