--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "e2e:dc": "jest --config apps/data-collector/test/jest-e2e.js"
   },
   "dependencies": {
-    "@google-cloud/firestore": "4.8.1",
+    "@google-cloud/firestore": "4.11.1",
+    "@google-cloud/storage": "5.8.5",
     "@hapi/joi": "17.1.1",
     "@nestjs/common": "7.6.15",
     "@nestjs/core": "7.6.15",
@@ -52,7 +53,7 @@
     "winston": "3.3.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "7.5.7",
+    "@nestjs/cli": "7.6.0",
     "@nestjs/schematics": "7.3.1",
     "@nestjs/testing": "7.6.15",
     "@types/express": "4.17.11",
@@ -108,7 +109,9 @@
       "@kb/firestore/(.*)": "<rootDir>/libs/firestore/src/$1",
       "@kb/firestore": "<rootDir>/libs/firestore/src",
       "@kb/cassandra/(.*)": "<rootDir>/libs/cassandra/src/$1",
-      "@kb/cassandra": "<rootDir>/libs/cassandra/src"
+      "@kb/cassandra": "<rootDir>/libs/cassandra/src",
+      "@kb/storage/(.*)": "<rootDir>/libs/storage/src/$1",
+      "@kb/storage": "<rootDir>/libs/storage/src"
     }
   }
 }
