--- a/cloud/opc/westus00/westus00.env
+++ b/cloud/opc/westus00/westus00.env
@@ -1,6 +1,10 @@
 # all following variables will appear
 # CORS_ORIGINS
 # LOG_COLLECTOR_TOKEN
+# GCP_STORAGE_PROJECT_ID
+# GCP_STORAGE_BUCKET_NAME
+# GCP_STORAGE_CLIENT_EMAIL
+# GCP_STORAGE_CLIENT_KEY
 # FIRESTORE_PROJECT_ID
 # FIRESTORE_CLIENT_EMAIL
 # FIRESTORE_CLIENT_KEY
