--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -14,15 +14,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: GCP authenticate as service account
-        uses: google-github-actions/setup-gcloud@master
-        with:
-          project_id: ${{ secrets.GCLOUD_PROJECT }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Copy cassandra secure bundle from GCP bucket
-        run: |
-          gsutil cp ${{ secrets.CASSANDRA_SECURE_BUNDLE_GS_URL }} ./backend/db/cassandra
+#      - name: GCP authenticate as service account
+#        uses: google-github-actions/setup-gcloud@master
+#        with:
+#          project_id: ${{ secrets.GCLOUD_PROJECT }}
+#          service_account_key: ${{ secrets.GCP_SA_KEY }}
+#
+#      - name: Copy cassandra secure bundle from GCP bucket
+#        run: |
+#          gsutil cp ${{ secrets.CASSANDRA_SECURE_BUNDLE_GS_URL }} ./backend/db/cassandra
 
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -60,7 +60,7 @@ jobs:
           GCP_STORAGE_BUCKET_NAME: ${{ secrets.GCP_STORAGE_BUCKET_NAME }}
           GCP_STORAGE_CLIENT_EMAIL: ${{ secrets.GCP_STORAGE_CLIENT_EMAIL }}
           GCP_STORAGE_CLIENT_KEY: ${{ secrets.GCP_STORAGE_CLIENT_KEY }}
-          ASTRA_DB_KEYSPACE: ${{ secrets.ASTRA_DB_KEYSPACE }}
+          ASTRA_DB_KEYSPACE: ${{ secrets.ASTRA_DB_KEYSPACE }} # TODO: remove all definitions related to cassandra
           ASTRA_DB_USERNAME: ${{ secrets.ASTRA_DB_USERNAME }}
           ASTRA_DB_PASSWORD: ${{ secrets.ASTRA_DB_PASSWORD }}
           MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
