--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,18 @@
     "build:dc": "nest build data-collector",
     "build:sqm": "nest build search-queue-manager",
     "build:src": "nest build search-result-calculator",
-    "build:tha": "nest build top-hotels-aggregator",
+    "build:sra": "nest build search-result-aggregator",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start:us": "nest start",
     "start:dc": "nest start data-collector",
     "start:sqm": "nest start search-queue-manager",
     "start:src": "nest start search-result-calculator",
-    "start:tha": "nest start top-hotels-aggregator",
+    "start:sra": "nest start search-result-aggregator",
     "start:watch:us": "nest start --watch",
     "start:watch:dc": "nest start data-collector --watch",
     "start:watch:sqm": "nest start search-queue-manager --watch",
     "start:watch:src": "nest start search-result-calculator --watch",
-    "start:watch:tha": "nest start top-hotels-aggregator --watch",
+    "start:watch:sra": "nest start search-result-aggregator --watch",
     "start:debug:us": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
