--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -38,13 +38,13 @@ services:
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-result-calculator/main"]
 
-  top-hotels-aggregator:
+  search-result-aggregator:
     env_file:
       - dev.env
     volumes:
       - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/top-hotels-aggregator/main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-result-aggregator/main"]
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
