--- a/cloud/opc/westus00/filebeat.yml
+++ b/cloud/opc/westus00/filebeat.yml
@@ -18,10 +18,10 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /var/log/apps/THA-output.log
+      - /var/log/apps/SRA-output.log
     encoding: utf-8
     fields:
-      app: THA
+      app: SRA
       type: kingboo
 
 setup.template.settings:
