--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -68,8 +68,8 @@ services:
     ports:
       - 8555:8080
 
-  cassandra:
-    build:
-      context: ./db/cassandra
-    ports:
-      - 9042:9042
+#  cassandra:
+#    build:
+#      context: ./db/cassandra
+#    ports:
+#      - 9042:9042
