--- a/.github/workflows/test-webapp.yml
+++ b/.github/workflows/test-webapp.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         working-directory: ./webapp
         run: |
-          npm ci --silent
+          npm ci
 
       - name: Build
         working-directory: ./webapp
