--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/output
+      - ./compose-output/us:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/user-service/main"]
     ports:
@@ -14,7 +14,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/output
+      - ./compose-output/sqm:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-queue-manager/main"]
     ports:
@@ -24,7 +24,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/output
+      - ./compose-output/dc:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/data-collector/main"]
 
@@ -34,7 +34,7 @@ services:
     environment:
       LOG_LEVEL: info
     volumes:
-      - ./compose-output:/usr/src/app/output
+      - ./compose-output/src:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-result-calculator/main"]
 
@@ -42,7 +42,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/output
+      - ./compose-output/sra:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "dist/apps/search-result-aggregator/main"]
 
