--- a/cloud/opc/westus00/prod.yml
+++ b/cloud/opc/westus00/prod.yml
@@ -33,6 +33,6 @@ services:
       - westus00.env
     volumes:
       - ./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - ./../../../compose-output/sqm/output.log:/var/log/apps/sqm/output.log:ro
-      - ./../../../compose-output/src/output.log:/var/log/apps/src/output.log:ro
-      - ./../../../compose-output/sra/output.log:/var/log/apps/sra/output.log:ro
+      - ./../../../compose-output/sqm/logs:/var/log/apps/sqm:ro
+      - ./../../../compose-output/src/logs:/var/log/apps/src:ro
+      - ./../../../compose-output/sra/logs:/var/log/apps/sra:ro
