--- a/cloud/opc/westus00/filebeat.yml
+++ b/cloud/opc/westus00/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /var/log/apps/sqm/output.log
+      - /var/log/apps/sqm/*.log
     encoding: utf-8
     fields:
       app: SQM
@@ -10,7 +10,7 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /var/log/apps/src/output.log
+      - /var/log/apps/src/*.log
     encoding: utf-8
     fields:
       app: SRC
@@ -18,7 +18,7 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /var/log/apps/sra/output.log
+      - /var/log/apps/sra/*.log
     encoding: utf-8
     fields:
       app: SRA
