--- a/.github/workflows/test-data-integration.yml
+++ b/.github/workflows/test-data-integration.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         working-directory: ./backend
         run: |
-          npm ci --silent
+          npm ci
 
       - name: Build data-collector
         working-directory: ./backend
