enable second mongo connection

--- a/prod.env.example
+++ b/prod.env.example
@@ -10,7 +10,8 @@ GCP_STORAGE_PROJECT_ID=
 GCP_STORAGE_BUCKET_NAME=
 GCP_STORAGE_CLIENT_EMAIL=
 GCP_STORAGE_CLIENT_KEY=
-MONGO_ADDRESS=
+MONGO_PRIMARY_ADDRESS=
+MONGO_SECONDARY_ADDRESS=
 SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
 FIRESTORE_PROJECT_ID=kingboo
 FIRESTORE_CLIENT_EMAIL=
