--- a/backend/package.json
+++ b/backend/package.json
@@ -36,12 +36,13 @@
     "@google-cloud/firestore": "4.11.1",
     "@google-cloud/storage": "5.8.5",
     "@hapi/joi": "17.1.1",
-    "@nestjs/common": "7.6.15",
-    "@nestjs/core": "7.6.15",
-    "@nestjs/microservices": "7.6.15",
-    "@nestjs/mongoose": "7.2.4",
-    "@nestjs/platform-express": "7.6.15",
-    "@nestjs/schedule": "0.4.3",
+    "@nestjs/axios": "0.0.1",
+    "@nestjs/common": "8.0.6",
+    "@nestjs/core": "8.0.6",
+    "@nestjs/microservices": "8.0.6",
+    "@nestjs/mongoose": "8.0.1",
+    "@nestjs/platform-express": "8.0.6",
+    "@nestjs/schedule": "1.0.1",
     "amqp-connection-manager": "3.2.1",
     "amqplib": "0.7.1",
     "cassandra-driver": "4.6.1",
@@ -49,14 +50,14 @@
     "puppeteer": "8.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "6.6.7",
+    "rxjs": "7.3.0",
     "winston": "3.3.3",
     "winston-daily-rotate-file": "4.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "7.5.7",
-    "@nestjs/schematics": "7.3.1",
-    "@nestjs/testing": "7.6.15",
+    "@nestjs/cli": "8.1.1",
+    "@nestjs/schematics": "8.0.2",
+    "@nestjs/testing": "8.0.6",
     "@types/express": "4.17.11",
     "@types/hapi__joi": "17.1.6",
     "@types/jest": "26.0.22",
