--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         working-directory: ./backend
         run: |
-          npm ci --silent
+          npm ci
 
       - name: Build user-service
         working-directory: ./backend
