--- a/.github/workflows/deploy-to-westus02.yml
+++ b/.github/workflows/deploy-to-westus02.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           project_id: ${{ secrets.GCLOUD_PROJECT }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
       - uses: hashicorp/setup-terraform@v1
 
