--- a/cloud/gcp/westus02/prod.yml
+++ b/cloud/gcp/westus02/prod.yml
@@ -3,7 +3,7 @@ services:
   search-result-calculator:
     env_file:
       - westus02.env
-      - ./../opc.env
+      - ./../gcp.env
     volumes:
       - ./../../../compose-output/src:/usr/src/app/output
 
