--- a/.github/workflows/plan-westus02.yml
+++ b/.github/workflows/plan-westus02.yml
@@ -11,7 +11,7 @@ jobs:
       TF_VAR_project: ${{ secrets.GCLOUD_PROJECT }}
       TF_VAR_region: us-east1
       TF_VAR_zone: us-east1-b
-      TF_VAR_vm_name: kb-instance
+      TF_VAR_vm_name: vm-instance
       TF_VAR_github-service_name: ${{ secrets.WESTUS02_USER }}
       TF_VAR_github-service_pub_key: ${{ secrets.WESTUS02_PUBLIC_KEY }}
       TF_VAR_gservice_email: ${{ secrets.GCP_SA_EMAIL }}
