--- a/.github/workflows/plan-westus02.yml
+++ b/.github/workflows/plan-westus02.yml
@@ -49,6 +49,8 @@ jobs:
         run: terraform plan -no-color
         continue-on-error: true
 
+# TODO: save plan to file and use it when apply
+# https://docs.github.com/en/actions/guides/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts
       - uses: actions/github-script@0.9.0
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
