--- a/.github/workflows/plan-westus02.yml
+++ b/.github/workflows/plan-westus02.yml
@@ -46,12 +46,19 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
+        run: terraform plan -no-color -out=westus02.tfplan
         continue-on-error: true
 
-# TODO: save plan to file and use it when apply
-# https://docs.github.com/en/actions/guides/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts
-      - uses: actions/github-script@0.9.0
+
+      - name: Archive terraform plan
+        if: ${{ success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: westus02-tfplan
+          path: westus02.tfplan
+
+      - name: Attach comment with tf result to PR
+        uses: actions/github-script@0.9.0
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
