--- a/.github/workflows/plan-westus02.yml
+++ b/.github/workflows/plan-westus02.yml
@@ -46,18 +46,8 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -input=false -out=westus02.tfplan
+        run: terraform plan -no-color -input=false
         continue-on-error: true
-
-      - run: ls -a
-
-      - name: Archive terraform plan
-        if: ${{ steps.plan.outcome == 'success' }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: westus02-tfplan
-          path: ${{env.tf_actions_working_dir}}/westus02.tfplan
-          if-no-files-found: error
 
       - name: Attach comment with tf result to PR
         uses: actions/github-script@0.9.0
