--- a/.github/workflows/plan-westus02.yml
+++ b/.github/workflows/plan-westus02.yml
@@ -46,8 +46,18 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -input=false
+        run: terraform plan -no-color -input=false -out=westus02.tfplan
         continue-on-error: true
+
+      - name: Archive terraform plan
+        if: ${{ steps.plan.outcome == 'success' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: westus02-tf
+          path: |
+            ${{env.tf_actions_working_dir}}/westus02.tfplan
+            ${{env.tf_actions_working_dir}}/.terraform
+          if-no-files-found: error
 
       - name: Attach comment with tf result to PR
         uses: actions/github-script@0.9.0
